crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_teammate_spawn_completed.snap
---
source: crates/ganja-tui/src/app_tests.rs
expression: screen(&terminal)
---
● Task(teammate: "reviewer", backend: "claude", description: "strict review")   
  ⎿ teammate started · 15.2s                                                    
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
· Thinking… (0s)                                                                
┌ message ─────────────────────────────────────────────────────────────────────┐
│ Ask ganja something...                                                       │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
⠋ streaming
