crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_theme_gruvbox.snap
---
source: crates/ganja-tui/src/app.rs
expression: styled_screen(&terminal)
---
 0 ["you" Rgb(146, 131, 116) on Rgb(40, 40, 40)] ["                                                                             " Reset on Rgb(40, 40, 40)]
 1 ["show me every color you have" Rgb(142, 192, 124) on Rgb(40, 40, 40)] ["                                                    " Reset on Rgb(40, 40, 40)]
 2 ["                                                                                " Reset on Rgb(40, 40, 40)]
 3 ["ganja" Rgb(146, 131, 116) on Rgb(40, 40, 40)] ["                                                                           " Reset on Rgb(40, 40, 40)]
 4 ["One edit applied, one command refused." Rgb(235, 219, 178) on Rgb(40, 40, 40)] ["                                          " Reset on Rgb(40, 40, 40)]
 5 ["[done] edit: theme.rs" Rgb(235, 219, 178) on Rgb(40, 40, 40)] ["                                                           " Reset on Rgb(40, 40, 40)]
 6 ["@@ -1,2 +1,2 @@" Rgb(146, 131, 116) on Rgb(40, 40, 40)] ["                                                                 " Reset on Rgb(40, 40, 40)]
 7 ["-let theme = Theme::default();" Rgb(204, 36, 29) on Rgb(40, 40, 40)] ["                                                  " Reset on Rgb(40, 40, 40)]
 8 ["+let theme = themes.theme();" Rgb(152, 151, 26) on Rgb(40, 40, 40)] ["                                                    " Reset on Rgb(40, 40, 40)]
 9 ["context" Rgb(146, 131, 116) on Rgb(40, 40, 40)] ["                                                                         " Reset on Rgb(40, 40, 40)]
10 ["[error] bash: rm -rf /" Rgb(251, 73, 52) on Rgb(40, 40, 40)] ["                                                          " Reset on Rgb(40, 40, 40)]
11 ["refused: destructive command" Rgb(251, 73, 52) on Rgb(40, 40, 40)] ["                                                    " Reset on Rgb(40, 40, 40)]
12 ["                                                                                " Reset on Rgb(40, 40, 40)]
13 ["                                                                                " Reset on Rgb(40, 40, 40)]
14 ["                                                                                " Reset on Rgb(40, 40, 40)]
15 ["                                                                                " Reset on Rgb(40, 40, 40)]
16 ["                                                                                " Reset on Rgb(40, 40, 40)]
17 ["                                                                                " Reset on Rgb(40, 40, 40)]
18 ["┌ message ─────────────────────────────────────────────────────────────────────┐" Rgb(146, 131, 116) on Rgb(40, 40, 40)]
19 ["│" Rgb(146, 131, 116) on Rgb(40, 40, 40)] [" " Rgb(146, 131, 116) on Rgb(40, 40, 40) REVERSED] ["Ask ganja something...                                                       │" Rgb(146, 131, 116) on Rgb(40, 40, 40)]
20 ["│                                                                              │" Rgb(146, 131, 116) on Rgb(40, 40, 40)]
21 ["│                                                                              │" Rgb(146, 131, 116) on Rgb(40, 40, 40)]
22 ["└──────────────────────────────────────────────────────────────────────────────┘" Rgb(146, 131, 116) on Rgb(40, 40, 40)]
23 ["ready" Rgb(142, 192, 124) on Rgb(40, 40, 40)] ["                                                                           " Reset on Rgb(40, 40, 40)]
