crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_theme_opencode.snap
---
source: crates/ganja-tui/src/app.rs
expression: styled_screen(&terminal)
---
 0 ["you" Rgb(128, 128, 128) on Rgb(10, 10, 10)] ["                                                                             " Reset on Rgb(10, 10, 10)]
 1 ["show me every color you have" Rgb(157, 124, 216) on Rgb(10, 10, 10)] ["                                                    " Reset on Rgb(10, 10, 10)]
 2 ["                                                                                " Reset on Rgb(10, 10, 10)]
 3 ["ganja" Rgb(128, 128, 128) on Rgb(10, 10, 10)] ["                                                                           " Reset on Rgb(10, 10, 10)]
 4 ["One edit applied, one command refused." Rgb(238, 238, 238) on Rgb(10, 10, 10)] ["                                          " Reset on Rgb(10, 10, 10)]
 5 ["[done] edit: theme.rs" Rgb(238, 238, 238) on Rgb(10, 10, 10)] ["                                                           " Reset on Rgb(10, 10, 10)]
 6 ["@@ -1,2 +1,2 @@" Rgb(128, 128, 128) on Rgb(10, 10, 10)] ["                                                                 " Reset on Rgb(10, 10, 10)]
 7 ["-let theme = Theme::default();" Rgb(197, 59, 83) on Rgb(10, 10, 10)] ["                                                  " Reset on Rgb(10, 10, 10)]
 8 ["+let theme = themes.theme();" Rgb(79, 214, 190) on Rgb(10, 10, 10)] ["                                                    " Reset on Rgb(10, 10, 10)]
 9 ["context" Rgb(128, 128, 128) on Rgb(10, 10, 10)] ["                                                                         " Reset on Rgb(10, 10, 10)]
10 ["[error] bash: rm -rf /" Rgb(224, 108, 117) on Rgb(10, 10, 10)] ["                                                          " Reset on Rgb(10, 10, 10)]
11 ["refused: destructive command" Rgb(224, 108, 117) on Rgb(10, 10, 10)] ["                                                    " Reset on Rgb(10, 10, 10)]
12 ["                                                                                " Reset on Rgb(10, 10, 10)]
13 ["                                                                                " Reset on Rgb(10, 10, 10)]
14 ["                                                                                " Reset on Rgb(10, 10, 10)]
15 ["                                                                                " Reset on Rgb(10, 10, 10)]
16 ["                                                                                " Reset on Rgb(10, 10, 10)]
17 ["                                                                                " Reset on Rgb(10, 10, 10)]
18 ["┌ message ─────────────────────────────────────────────────────────────────────┐" Rgb(128, 128, 128) on Rgb(10, 10, 10)]
19 ["│" Rgb(128, 128, 128) on Rgb(10, 10, 10)] [" " Rgb(128, 128, 128) on Rgb(10, 10, 10) REVERSED] ["Ask ganja something...                                                       │" Rgb(128, 128, 128) on Rgb(10, 10, 10)]
20 ["│                                                                              │" Rgb(128, 128, 128) on Rgb(10, 10, 10)]
21 ["│                                                                              │" Rgb(128, 128, 128) on Rgb(10, 10, 10)]
22 ["└──────────────────────────────────────────────────────────────────────────────┘" Rgb(128, 128, 128) on Rgb(10, 10, 10)]
23 ["ready" Rgb(157, 124, 216) on Rgb(10, 10, 10)] ["                                                                           " Reset on Rgb(10, 10, 10)]
