crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_theme_tokyonight.snap
---
source: crates/ganja-tui/src/app.rs
expression: styled_screen(&terminal)
---
 0 ["you" Rgb(130, 139, 184) on Rgb(26, 27, 38)] ["                                                                             " Reset on Rgb(26, 27, 38)]
 1 ["show me every color you have" Rgb(255, 150, 108) on Rgb(26, 27, 38)] ["                                                    " Reset on Rgb(26, 27, 38)]
 2 ["                                                                                " Reset on Rgb(26, 27, 38)]
 3 ["ganja" Rgb(130, 139, 184) on Rgb(26, 27, 38)] ["                                                                           " Reset on Rgb(26, 27, 38)]
 4 ["One edit applied, one command refused." Rgb(200, 211, 245) on Rgb(26, 27, 38)] ["                                          " Reset on Rgb(26, 27, 38)]
 5 ["[done] edit: theme.rs" Rgb(200, 211, 245) on Rgb(26, 27, 38)] ["                                                           " Reset on Rgb(26, 27, 38)]
 6 ["@@ -1,2 +1,2 @@" Rgb(130, 139, 184) on Rgb(26, 27, 38)] ["                                                                 " Reset on Rgb(26, 27, 38)]
 7 ["-let theme = Theme::default();" Rgb(197, 59, 83) on Rgb(26, 27, 38)] ["                                                  " Reset on Rgb(26, 27, 38)]
 8 ["+let theme = themes.theme();" Rgb(79, 214, 190) on Rgb(26, 27, 38)] ["                                                    " Reset on Rgb(26, 27, 38)]
 9 ["context" Rgb(130, 139, 184) on Rgb(26, 27, 38)] ["                                                                         " Reset on Rgb(26, 27, 38)]
10 ["[error] bash: rm -rf /" Rgb(255, 117, 127) on Rgb(26, 27, 38)] ["                                                          " Reset on Rgb(26, 27, 38)]
11 ["refused: destructive command" Rgb(255, 117, 127) on Rgb(26, 27, 38)] ["                                                    " Reset on Rgb(26, 27, 38)]
12 ["                                                                                " Reset on Rgb(26, 27, 38)]
13 ["                                                                                " Reset on Rgb(26, 27, 38)]
14 ["                                                                                " Reset on Rgb(26, 27, 38)]
15 ["                                                                                " Reset on Rgb(26, 27, 38)]
16 ["                                                                                " Reset on Rgb(26, 27, 38)]
17 ["                                                                                " Reset on Rgb(26, 27, 38)]
18 ["┌ message ─────────────────────────────────────────────────────────────────────┐" Rgb(130, 139, 184) on Rgb(26, 27, 38)]
19 ["│" Rgb(130, 139, 184) on Rgb(26, 27, 38)] [" " Rgb(130, 139, 184) on Rgb(26, 27, 38) REVERSED] ["Ask ganja something...                                                       │" Rgb(130, 139, 184) on Rgb(26, 27, 38)]
20 ["│                                                                              │" Rgb(130, 139, 184) on Rgb(26, 27, 38)]
21 ["│                                                                              │" Rgb(130, 139, 184) on Rgb(26, 27, 38)]
22 ["└──────────────────────────────────────────────────────────────────────────────┘" Rgb(130, 139, 184) on Rgb(26, 27, 38)]
23 ["ready" Rgb(255, 150, 108) on Rgb(26, 27, 38)] ["                  " Reset on Rgb(26, 27, 38)] ["Enter send · Alt+Enter newline · Esc cancel · Ctrl-C quit" Rgb(130, 139, 184) on Rgb(26, 27, 38)]
