crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_themes_dialog_open.snap
---
source: crates/ganja-tui/src/app.rs
expression: styled_screen(&terminal)
---
 0 ["> show me every color you have" Rgb(157, 124, 216) on Rgb(10, 10, 10)] ["                                                  " Reset on Rgb(10, 10, 10)]
 1 ["                    " Reset on Rgb(10, 10, 10)] ["┌ themes ──────────────────────────────┐" Rgb(238, 238, 238) on Rgb(20, 20, 20)] ["                    " Reset on Rgb(10, 10, 10)]
 2 ["● One edit applied, " Rgb(238, 238, 238) on Rgb(10, 10, 10)] ["│  aura                                │" Rgb(238, 238, 238) on Rgb(20, 20, 20)] ["                    " Reset on Rgb(10, 10, 10)]
 3 ["● Edit(filePath: \"th" Rgb(238, 238, 238) on Rgb(10, 10, 10)] ["│  gruvbox                             │" Rgb(238, 238, 238) on Rgb(20, 20, 20)] ["                    " Reset on Rgb(10, 10, 10)]
 4 ["  ⎿ theme.rs" Rgb(238, 238, 238) on Rgb(10, 10, 10)] ["        " Reset on Rgb(10, 10, 10)] ["│" Rgb(238, 238, 238) on Rgb(20, 20, 20)] ["> opencode                            " Rgb(10, 10, 10) on Rgb(250, 178, 131)] ["│" Rgb(238, 238, 238) on Rgb(20, 20, 20)] ["                    " Reset on Rgb(10, 10, 10)]
 5 ["    @@ -1,2 +1,2 @@" Rgb(128, 128, 128) on Rgb(10, 10, 10)] [" " Reset on Rgb(10, 10, 10)] ["│  terminal                            │" Rgb(238, 238, 238) on Rgb(20, 20, 20)] ["                    " Reset on Rgb(10, 10, 10)]
 6 ["    -let theme = The" Rgb(197, 59, 83) on Rgb(10, 10, 10)] ["│  tokyonight                          │" Rgb(238, 238, 238) on Rgb(20, 20, 20)] ["                    " Reset on Rgb(10, 10, 10)]
 7 ["    +let theme = the" Rgb(79, 214, 190) on Rgb(10, 10, 10)] ["│                                      │" Rgb(238, 238, 238) on Rgb(20, 20, 20)] ["                    " Reset on Rgb(10, 10, 10)]
 8 ["    context" Rgb(128, 128, 128) on Rgb(10, 10, 10)] ["         " Reset on Rgb(10, 10, 10)] ["│" Rgb(238, 238, 238) on Rgb(20, 20, 20)] ["[j/k] [up/down] preview   [Enter] keep" Rgb(128, 128, 128) on Rgb(20, 20, 20)] ["│" Rgb(238, 238, 238) on Rgb(20, 20, 20)] ["                    " Reset on Rgb(10, 10, 10)]
 9 ["● Bash(command: \"rm " Rgb(224, 108, 117) on Rgb(10, 10, 10)] ["│                                      │" Rgb(238, 238, 238) on Rgb(20, 20, 20)] ["                    " Reset on Rgb(10, 10, 10)]
10 ["  ⎿ [error] refused:" Rgb(224, 108, 117) on Rgb(10, 10, 10)] ["│                                      │" Rgb(238, 238, 238) on Rgb(20, 20, 20)] ["                    " Reset on Rgb(10, 10, 10)]
11 ["                    " Reset on Rgb(10, 10, 10)] ["│                                      │" Rgb(238, 238, 238) on Rgb(20, 20, 20)] ["                    " Reset on Rgb(10, 10, 10)]
12 ["                    " Reset on Rgb(10, 10, 10)] ["│                                      │" Rgb(238, 238, 238) on Rgb(20, 20, 20)] ["                    " Reset on Rgb(10, 10, 10)]
13 ["                    " Reset on Rgb(10, 10, 10)] ["│                                      │" Rgb(238, 238, 238) on Rgb(20, 20, 20)] ["                    " Reset on Rgb(10, 10, 10)]
14 ["                    " Reset on Rgb(10, 10, 10)] ["│                                      │" Rgb(238, 238, 238) on Rgb(20, 20, 20)] ["                    " Reset on Rgb(10, 10, 10)]
15 ["                    " Reset on Rgb(10, 10, 10)] ["│                                      │" Rgb(238, 238, 238) on Rgb(20, 20, 20)] ["                    " Reset on Rgb(10, 10, 10)]
16 ["                    " Reset on Rgb(10, 10, 10)] ["└──────────────────────────────────────┘" Rgb(238, 238, 238) on Rgb(20, 20, 20)] ["                    " Reset on Rgb(10, 10, 10)]
17 ["                                                                                " Reset on Rgb(10, 10, 10)]
18 ["┌ message ─────────────────────────────────────────────────────────────────────┐" Rgb(128, 128, 128) on Rgb(10, 10, 10)]
19 ["│" Rgb(128, 128, 128) on Rgb(10, 10, 10)] [" " Rgb(128, 128, 128) on Rgb(10, 10, 10) REVERSED] ["Ask ganja something...                                                       │" Rgb(128, 128, 128) on Rgb(10, 10, 10)]
20 ["│                                                                              │" Rgb(128, 128, 128) on Rgb(10, 10, 10)]
21 ["│                                                                              │" Rgb(128, 128, 128) on Rgb(10, 10, 10)]
22 ["└──────────────────────────────────────────────────────────────────────────────┘" Rgb(128, 128, 128) on Rgb(10, 10, 10)]
23 ["ready" Rgb(157, 124, 216) on Rgb(10, 10, 10)] ["                                                                           " Reset on Rgb(10, 10, 10)]
