crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_thinking.snap
---
source: crates/ganja-tui/src/app.rs
expression: screen(&terminal)
---
> say hello                                                                     
                                                                                
✻ The user wants a greeting and nothing more, so a short one is the whole of the
  job here.                                                                     
● Hello, world!                                                                 
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ message ─────────────────────────────────────────────────────────────────────┐
│ Ask ganja something...                                                       │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
ready
