crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_tool_completed_with_a_diff.snap
---
source: crates/ganja-tui/src/app.rs
expression: screen(&terminal)
---
ganja                                                                           
[done] edit: a.rs                                                               
@@ -1,2 +1,2 @@                                                                 
-old line                                                                       
+new line                                                                       
context line                                                                    
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ message ─────────────────────────────────────────────────────────────────────┐
│ Ask ganja something...                                                       │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
ready                  Enter send · Alt+Enter newline · Esc cancel · Ctrl-C quit
