crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_tool_error.snap
---
source: crates/ganja-tui/src/app.rs
expression: screen(&terminal)
---
ganja                                                                           
[error] shell: rm -rf /                                                         
refused: destructive command                                                    
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ message ─────────────────────────────────────────────────────────────────────┐
│ Ask ganja something...                                                       │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
ready
