crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_tool_pending.snap
---
source: crates/ganja-tui/src/app.rs
expression: screen(&terminal)
---
● Shell                                                                         
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ message ─────────────────────────────────────────────────────────────────────┐
│ Ask ganja something...                                                       │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
ready
