crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_tool_running.snap
---
source: crates/ganja-tui/src/app.rs
expression: screen(&terminal)
---
ganja                                                                           
[running] shell: cargo test                                                     
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ message ─────────────────────────────────────────────────────────────────────┐
│ Ask ganja something...                                                       │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
ready
