crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_usage_dialog_open.snap
---
source: crates/ganja-tui/src/app.rs
expression: screen(&terminal)
---
                                                                                
  ┌ usage ───────────────────────────────────────────────────────────────────┐  
  │Session                                                                   │  
  │  Total cost:      unpriced — uncataloged model                           │  
  │  Total duration:  0s                                                     │  
  │  Usage by model:                                                         │  
  │    canned:  1.2k input, 34 output, 5 reasoning, 600 cache read, 100 cache│  
  │                                                                          │  
  │Context                                                                   │  
  │  unsized model — no window to meter                                      │  
  │                                                                          │  
  │Cache                                                                     │  
  │  ██████░░░░░░░░░░░░░░ 32% of input read from cache                       │  
  │                                                                          │  
  │Turns                                                                     │  
  │  turn             in      out   reason  cache-r  cache-w     cost        │  
  │  _fixture       1200       34        5      600      100        -        │  
  │                                                                          │  
  │plan limits unavailable on this credential (probed 2026-08-14):           │  
  │  an openai API key's backend sends none; anthropic's needs an            │  
  │  Admin key — platform.claude.com/docs/en/manage-claude/usage-cost-api    │  
  │[Esc] close                                                               │  
  └──────────────────────────────────────────────────────────────────────────┘  
                                                                                
┌ message ─────────────────────────────────────────────────────────────────────┐
│ Ask ganja something...                                                       │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
ready · 1.9k in · 34 out
